Some light Java cleanup / migration